# merklerust

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: prebuild-and-publish.yaml
benchmarks/: merkle.bench.ts
crates/core/: Cargo.toml
crates/core/src/: hashes.rs  lib.rs  merkle.rs
crates/core/tests/: merkle_tests.proptest-regressions  merkle_tests.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs
tests/: merkle.test.ts
