[package]
name = "merklerust-node"
version = "0.1.0"
edition = "2024"

[lib]
name = "merklerust_node"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi8"] }
napi-derive = "3"
merklerust-core = { path = "../core" }
sha2 = "0.10"

[build-dependencies]
napi-build = "2"

